# lit-autobracket

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
data/: TENNvLIBRTYnostrength.json  TENNvLIBRTYnostrengthdist.json  TENNvLIBRTYwithstrength.json  TENNvLIBRTYwithstrengthdist.json
src/: app.py
