[tool.poetry]
name = "lit-autobracket"
version = "0.1.0"
description = "lit-autobracket.tarpey.dev"
authors = ["Mike Tarpey <mike@tarpey.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.78.0"
plotly = "^4.14.3"
pandas = "^1.2.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
